Spacing fix to Team page

--- a/src/components/Team/Advisors/loopringadvisors.css
+++ b/src/components/Team/Advisors/loopringadvisors.css
@@ -13,7 +13,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	padding: 60px 0;
+	padding: 60px 0 15px 0;
 }
 
 .loopring--secondary--advisors--container {
