--- a/src/components/Team/PersonCard/loopringpersoncard.css
+++ b/src/components/Team/PersonCard/loopringpersoncard.css
@@ -5,8 +5,8 @@
 	flex-direction: column;
 	margin: 15px;
 	position: relative;
-	width: 30%;
 	border-radius: 3px;
+	width: 30%;
 	padding-top: 60px;
 	color: #888;
 }
@@ -100,6 +100,13 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+@media (max-width: 1280px) {
+	.person--card {
+		width: 40%;
+		margin-bottom: 60px;
+	}
 }
 
 @media (max-width: 960px) {
