--- a/src/components/Team/PrimaryTeam/loopringprimaryteam.css
+++ b/src/components/Team/PrimaryTeam/loopringprimaryteam.css
@@ -1,5 +1,5 @@
 .loopring--primary--team {
-	padding: 60px 0;
+	padding: 60px 0 15px 0;
 }
 
 .loopring--primary--team--header {
